		  be explicitly called in code instead of _().
		* Fixed a bug in WebServer.cpp:CWebServer::GetStatusBox():
		  return value was missing end tags.
		* Changed back to macro the inline function version of
		  unicode2char() when using UNICODE. Unfortunately, when the
		  fucntion returns, the string object gets out of scope, so we
		  stick to the macro version for now.

	GonoszTopi:
		* Initial work on EC protocol version 2.0.
		* Fixed a crash on broken language files (.po)
		* Some GUI cosmetics.
		* Lots of i18n fixes.
		* As a side effect, fixed the "Any" search in webserver.
		* Fixed webserver connection with empty passwords. :)
		* Fixed webserver connection with guest account.
		* Added "add <ed2k link>" command to amulecmd.
		* Tracked down and killed a number of hidden bugs.

	Special Thanks To:

		* Bug and feature reporters:
		  Banerjee,	ecforum,
		  jaguarwan,	jolupa,
		  juanii,	kdka,
		  m2kio,	Pableron,
		  plaenky,	Sir

		* Contributors:
		  Baz,		boutros,
		  Frankk,	han,
		  skolnick,	Vollstrecker,
		  volpop

		* Everyone at:
		  #amule	irc.freenode.net
		  wiki		http://wiki.amule.org
		  forums	http://forum.amule.org
		  bugtracker	http://bugs.amule.org

		* All aMule users!!!

	Welcome our new aMule team member: nachbarnebenan (Tester)


--------------------------------------------------------------------------------

Version 2.0.0rc7 - The "99,6% Final" version.
----------
2004-10-19

	bisley:
		* Added session ratio and total ratio to XAS

	deltaHF:
	        * Got back from hell and changed one icon on the GUI ;)

	Jacobo221:
		aMule GUI:
		* Fixed two almost-the-same bugs when clicked download button 
		  and no items where selected (as reported by powtrix/willy,
		  thanks).

		aMuleWeb:
		* Fixed a bug where up/down limits woudln't be displayed 
		  correctly if their string length were different.

		aMuleCMD:
		* Added 'list' (or 'find') command to search for a file in
		  the downloads queue by name or by number (or just show all).